# MAGE-RAG

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README-zh.md  README.md  ecosystem.config.cjs  ecosystem.group_b.config.cjs  ecosystem.group_cd.config.cjs  ecosystem.jobs.config.cjs  ecosystem.sync.config.cjs  main.py  pyproject.toml  results_dashboard.py
analysis/: __init__.py  dashboard_app.py  paper_artifacts.py  paper_breakdown.py  paper_budget_ablation.py  paper_case_study.py  paper_diagnostics.py  paper_efficiency.py  paper_main_results.py  paper_registry.py  paper_trace_statistics.py  result_fields.py  results_loader.py  results_metrics.py
analysis/plugins/: __init__.py  aeg_rag.py  base.py  builtin.py  magerag.py
baselines/: __init__.py  base.py  bgem3.py  bgem3_cache.py  bm25.py  colbertv2.py  colbertv2_cache.py  evisrag.py  g2reader.py  image.py  m3docrag.py  m3docrag_iterate.py  m3docrag_iterate_query.py  ocr.py  wrapper.py
baselines/aeg_rag/: __init__.py  actions.py  builder.py  candidate_generator.py  evaluator.py  graph_store.py  renderer.py  retrieval.py  state.py
baselines/g2_reader/: .gitignore  requirements.txt
baselines/magerag/: __init__.py  actions.py  builder.py  candidate_generator.py  evaluator.py  graph_store.py  renderer.py  retrieval.py  state.py
baselines/utils/: __init__.py  benchmarks_related.py
baselines/visrag/: .gitignore
benchmarks/: adapters.py  report.py  results.py  runner.py  wraper.py  wrapper.py
benchmarks/evidence_graph/: __init__.py  builder.py  content.py  edges.py  embeddings.py  mineru_loader.py  nodes.py  paths.py  retry.py  schema.py  semantic.py  summaries.py  writer.py
benchmarks/longdocurl/: .gitignore  LONGDOCURL_BENCHMARK_GUIDE_CN.md  README.md  __init__.py  main.sh  main4api.sh  main4dpi144.sh
benchmarks/mmlongbench/: .env.mmlongbench.example  .env.mmlongbench8000  .env.router.example  .gitignore  MMLONGBENCH_BENCHMARK_GUIDE.md  MMLONGBENCH_BENCHMARK_GUIDE_CN.md  __init__.py  env_utils.py  litellm_router.py  route_utils.py  run_api.py  run_api_text.py  run_lvlm.py
benchmarks/scripts/: build_evidence_graphs.py  build_mineru_text_pages.py  extract_mineru.py  generate_bgem3_embeddings.py  generate_colbertv2_embeddings.py  generate_colpali_embeddings.py  generate_visrag_embeddings.py  preprocess_documents.py  verify_artifacts.py
benchmarks/utils/: data_utils.py  document_preprocess.py  embedding_cache.py  embedding_cache_cli.py  mineru_text.py  results_utils.py
configs/: .gitignore  config.yaml  litellm_autodl_config.yaml  litellm_config.yaml  litellm_hyyun_config.yaml
configs/baselines/: aeg-rag.yaml  bgem3.yaml  bm25.yaml  colbertv2.yaml  evisrag.yaml  g2-reader.yaml  image.yaml  m3docrag-iterate-query.yaml  m3docrag-iterate.yaml  m3docrag.yaml  magerag.yaml  ocr.yaml
configs/benchmarks/: longdocurl.yaml  mmlongbench.yaml
configs/llm_providers/: litellm.yaml
docs/: Offline Evidence Graph 数据仓库探索报告.md  vLLM 启用本地模型服务.md  北航服务器部署模型并于该服务器调用的方案.md  最新代码使用说明以及相关注意事项.md  模型服务管理工作流建议.md
results/: .gitignore
results/mmlongbench/: g2_reader_smoke_q000827_results.jsonl  (+1 more)
scripts/: auto.sh  mineru_extract_longdocurl.py  pm2_log_rotate.sh  pm2_vllm_wrapper.sh  run_aeg_rag.sh  run_b1_10.sh  run_b3_10.sh  run_bgem3_longdocurl.sh  run_bgem3_longdocurl_sweep.sh  run_bgem3_mmlongbench.sh  run_bgem3_mmlongbench_sweep.sh  run_bm25_sweep.sh  run_build_longdocurl.sh  run_build_mmlongbench.sh  run_c4.sh  run_c5.sh  run_colbertv2_longdocurl.sh  run_colbertv2_mmlongbench.sh  run_d3.sh  run_d4.sh  run_d5.sh  run_evisrag.sh  run_g2_longdocurl_pm2.sh  run_group_a.sh  run_group_a_2.sh  run_group_b_0.sh  run_group_b_1.sh  run_group_b_2.sh  run_group_b_3.sh  run_group_c.sh  run_group_d.sh  run_group_d_2.sh  run_image_ocr.sh  run_llm_ocr.sh  run_m3docrag-iterate-query.sh  run_m3docrag-iterate.sh  run_m3docrag.sh  run_magerag.sh  run_magerag_ai4s.sh  serve_colpali_vllm.sh  (+9 more)
tests/: test_aeg_rag.py  test_benchmark_adapters.py  test_build_scripts.py  test_context_builders.py  test_data_utils.py  test_embedding_cache_preprocess.py  test_evidence_graph_builder.py  test_g2_pm2_wrapper.py  test_g2_reader_self_answer_hook.py  test_g2reader_baseline.py  test_generate_visrag_embeddings.py  test_hydra_config.py  test_llm_utils.py  test_longdocurl_results.py  test_magerag.py  test_mineru_extract_longdocurl.py  test_mineru_text_pages.py  test_mmlongbench_results.py  test_results_analysis.py  test_runner_results.py
utils/: config_utils.py  hydra_utils.py  image_crop.py  llm_utils.py  logging_utils.py  serialization_utils.py
(+1197 files in other folders)
