[project]
name = "magerag"
version = "0.1.0"
description = "uv environment for MAGE-RAG."
requires-python = "==3.12.*"
dependencies = [
    "colbert-ai==0.2.22",
    "flagembedding==1.4.0",
    "httpx[socks]==0.28.1",
    "hydra-core==1.3.2",
    "matplotlib==3.10.9",
    "numpy==2.2.6",
    "openai==2.32.0",
    "pandas==3.0.2",
    "plotly==6.7.0",
    "pymupdf==1.27.2.2",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "safetensors==0.7.0",
    "spacy==3.8.14",
    "streamlit==1.57.0",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==5.5.4",
    "vllm==0.19.1",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]
