[project]
name = "magerag"
version = "0.1.0"
description = "uv environment for MAGE-RAG."
requires-python = "==3.12.*"
dependencies = [
    "colbert-ai==0.2.22",
    "flagembedding==1.4.0",
    "httpx[socks]==0.28.1",
    "hydra-core==1.3.2",
    "matplotlib==3.10.9",
    "numpy==2.2.6",
    "openai==2.32.0",
    "pandas==3.0.2",
    "plotly==6.7.0",
    "pymupdf==1.27.2.2",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "safetensors==0.7.0",
    "spacy==3.8.14",
    "streamlit==1.57.0",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==5.5.4",
    "vllm==0.19.1",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux'"]
constraint-dependencies = [
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "altair==6.1.0",
    "anthropic==0.96.0",
    "anyio==4.13.0",
    "apache-tvm-ffi==0.1.10",
    "beautifulsoup4==4.14.3",
    "bitarray==3.8.1",
    "cachetools==7.0.6",
    "cbor2==5.9.0",
    "certifi==2026.2.25",
    "click==8.3.2",
    "cryptography==46.0.7",
    "cuda-pathfinder==1.5.3",
    "datasets==4.8.5",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.0",
    "fastapi==0.136.0",
    "filelock==3.25.2",
    "fsspec==2026.2.0",
    "gguf==0.18.0",
    "googleapis-common-protos==1.74.0",
    "grpcio==1.80.0",
    "hf-xet==1.4.3",
    "httptools==0.7.1",
    "huggingface-hub==1.13.0",
    "idna==3.12",
    "jiter==0.14.0",
    "jmespath==0.10.0",
    "markdown-it-py==4.0.0",
    "mcp==1.27.0",
    "mistral-common==1.11.0",
    "model-hosting-container-standards==0.1.14",
    "narwhals==2.21.2",
    "nvidia-cutlass-dsl==4.5.0.dev0",
    "nvidia-cutlass-dsl-libs-base==4.5.0.dev0",
    "nvidia-ml-py==13.595.45",
    "omegaconf==2.3.0",
    "opentelemetry-api==1.41.0",
    "opentelemetry-exporter-otlp==1.41.0",
    "opentelemetry-exporter-otlp-proto-common==1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.0",
    "opentelemetry-exporter-otlp-proto-http==1.41.0",
    "opentelemetry-proto==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-semantic-conventions==0.62b0",
    "packaging==26.0",
    "peft==0.18.1",
    "pillow==12.1.1",
    "propcache==0.4.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-settings==2.14.0",
    "pyjwt==2.12.1",
    "python-multipart==0.0.26",
    "quack-kernels==0.3.11",
    "regex==2026.4.4",
    "rich==13.9.4",
    "rich-toolkit==0.19.7",
    "rpds-py==0.30.0",
    "scikit-learn==1.8.0",
    "sentence-transformers==5.5.1",
    "sentry-sdk==2.58.0",
    "smart-open==7.6.0",
    "soupsieve==2.8.3",
    "sse-starlette==3.3.4",
    "starlette==0.52.1",
    "tiktoken==0.12.0",
    "typer==0.24.1",
    "ujson==5.12.1",
    "urllib3==2.6.3",
    "uvicorn==0.45.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "wrapt==2.1.2",
    "xgrammar==0.1.33",
    "yarl==1.23.0",
    "zipp==3.23.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]
